# 1.12.2-1.1
* Items in mega chests now have their tooltips rendered correctly.
* Buffed mining xp for ores again.
* Tall grass will no longer ding from botany.
* Nerfed seduce villager, allows reducing total trade cost by half.
* Buffed blacksmithing xp for repairing items.
* Buffed blacksmithing xp for non-gold items.
* Glazed terracota now gives blacksmithing xp.